refactor: JPA로 인한 테스트 코드 리팩터링