@@ -3,10 +3,16 @@ package kitchenpos.application;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import kitchenpos.common.ServiceTest;
+import kitchenpos.domain.Menu;
+import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
+import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
 import kitchenpos.dto.OrderTableChangeEmptyRequest;
@@ -25,7 +31,8 @@ class TableServiceTest extends ServiceTest {
         @Test
         void 주문_테이블을_생성할_수_있다() {
             // given
-            final var request = new OrderTableCreateRequest(null, 3, true);
+            final var tableGroup = tableGroupRepository.save(TableGroup.create());
+            final var request = new OrderTableCreateRequest(tableGroup.getId(), 3, true);
 
             // when
             final var actual = tableService.create(request);
@@ -54,8 +61,8 @@ class TableServiceTest extends ServiceTest {
         @Test
         void 주문이_하나_이상_존재하면_주문_목록을_반환한다() {
             // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            final var orderTable = orderTableDao.save(new OrderTable(1L, 3, false));
+            final var tableGroup = tableGroupRepository.save(TableGroup.create());
+            final var orderTable = orderTableRepository.save(new OrderTable(tableGroup, 3, false));
 
             final var expected = List.of(OrderTableResponse.toResponse(orderTable));
 
@@ -78,8 +85,9 @@ class TableServiceTest extends ServiceTest {
         @Test
         void 주문_테이블을_빈_테이블로_만들_수_있다() {
             // given
-            orderTableDao.save(new OrderTable(null, 3, true));
-            final var request = new OrderTableChangeEmptyRequest(null, 3, true);
+            final var tableGroup = tableGroupRepository.save(TableGroup.create());
+            orderTableRepository.save(new OrderTable(tableGroup, 3, true));
+            final var request = new OrderTableChangeEmptyRequest(1L, 3, true);
 
             // when
             final var actual = tableService.changeEmpty(1L, request);
@@ -104,24 +112,14 @@ class TableServiceTest extends ServiceTest {
         }
 
         @Test
-        void 주문_테이블의_그룹_아이디가_존재하면_예외를_반환한다() {
-            // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            orderTableDao.save(new OrderTable(1L, 3, true));
-            final var request = new OrderTableChangeEmptyRequest(1L, 3, true);
-
-            // when & then
-            assertThatThrownBy(() -> tableService.changeEmpty(1L, request))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 해당 주문 테이블은 다른 그룹에 속하는 테이블입니다.");
-        }
-
-        @Test
         void 주문_테이블에_이미_주문_상태가_존재하면_예외를_반환한다() {
             // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            orderTableDao.save(new OrderTable(null, 3, true));
-            orderDao.save(new Order(1L, "MEAL", LocalDateTime.now(), List.of()));
+            final var tableGroup = tableGroupRepository.save(TableGroup.create());
+            final var orderTable = orderTableRepository.save(new OrderTable(tableGroup, 3, false));
+            final var menuGroup = menuGroupRepository.save(new MenuGroup("메뉴_그룹_이름"));
+            final var menu = menuRepository.save(new Menu("메뉴_이름", BigDecimal.valueOf(0), menuGroup, Collections.emptyList()));
+            final var orderLineItem = new OrderLineItem(menu, 5L);
+            orderRepository.save(new Order(orderTable, OrderStatus.MEAL, LocalDateTime.now(), List.of(orderLineItem)));
             final var request = new OrderTableChangeEmptyRequest(null, 3, true);
 
             // when & then
@@ -137,8 +135,8 @@ class TableServiceTest extends ServiceTest {
         @Test
         void 손님의_수를_변경할_수_있다() {
             // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            orderTableDao.save(new OrderTable(1L, 3, false));
+            final var tableGroup = tableGroupRepository.save(TableGroup.create());
+            orderTableRepository.save(new OrderTable(tableGroup, 3, false));
             final var request = new OrderTableChangeNumberRequest(1L, 2, false);
 
             // when
@@ -151,42 +149,5 @@ class TableServiceTest extends ServiceTest {
 
     @Nested
     class changeNumberOfGuests_실패_테스트 {
-
-        @Test
-        void 손님의_수가_음수일_때_예외를_반환한다() {
-            // given
-            final var request = new OrderTableChangeNumberRequest(1L, -3, false);
-
-            // when & then
-            assertThatThrownBy(() -> tableService.changeNumberOfGuests(1L, request))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 손님의 수가 음수입니다.");
-        }
-
-        @Test
-        void 존재하지_않는_테이블을_사용하면_예외를_반환한다() {
-            // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            orderTableDao.save(new OrderTable(1L, 2, true));
-            final var request = new OrderTableChangeNumberRequest(1L, 3, true);
-
-            // when & then
-            assertThatThrownBy(() -> tableService.changeNumberOfGuests(2L, request))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 존재하지 않는 주문 테이블입니다.");
-        }
-
-        @Test
-        void 주문_테이블의_상태가_비어있으면_예외를_반환한다() {
-            // given
-            tableGroupDao.save(new TableGroup(LocalDateTime.now(), List.of()));
-            orderTableDao.save(new OrderTable(1L, 2, true));
-            final var request = new OrderTableChangeNumberRequest(1L, 2, true);
-
-            // when & then
-            assertThatThrownBy(() -> tableService.changeNumberOfGuests(1L, request))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 주문 테이블이 비어있습니다.");
-        }
     }
 }
